src/objects/Case_Reporting_Snapshot__c.object
<CustomObject>
    <description>This custom object is used to store the values coming from the Case reports in order to create a snapshot.</description>
    <fields>
        <fullName>C_Detected_Language__c</fullName>
        <description>This field is used to Detect the Language coming from the case records</description>
        <label>Detected Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Record_Count__c</fullName>
        <description>This field is used to store the record count coming from the cases</description>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_Status__c</fullName>
        <description>This field is used to store the Case Status coming from the report</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>On Hold - Awaiting Customer</fullName>
                </value>
                <value>
                    <fullName>On Hold - Awaiting Support</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Re-opened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store the milestone violation status coming from the cases</description>
        <label>Violation</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Reporting Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRS-{000000}</displayFormat>
        <label>Case Reporting Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Reporting Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>